--- a/src/main/resources/view/ExpenseTimelineChart.fxml
+++ b/src/main/resources/view/ExpenseTimelineChart.fxml
@@ -13,15 +13,20 @@
                AnchorPane.leftAnchor="0.0"
                AnchorPane.rightAnchor="0.0"
                AnchorPane.topAnchor="0.0"
-               minHeight="300.0" prefHeight="300.0" maxHeight="300.0"
-               minWidth="540.0" prefWidth="540.0" maxWidth="540.0">
+               minHeight="350.0" prefHeight="350.0" maxHeight="350.0"
+               minWidth="540.0" prefWidth="540.0" maxWidth="540.0"
+               title="Timeline">
         <xAxis>
-            <CategoryAxis fx:id="xAxis">
+            <CategoryAxis fx:id="xAxis"
+                          label="Date"
+                          animated="false">
             </CategoryAxis>
         </xAxis>
 
         <yAxis>
-            <NumberAxis fx:id="YAxis">
+            <NumberAxis fx:id="YAxis"
+                        label="Amount/$"
+                        animated="false">
             </NumberAxis>
         </yAxis>
     </LineChart>
