--- a/src/main/resources/view/CalendarGridDay.fxml
+++ b/src/main/resources/view/CalendarGridDay.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Circle?>
 
-
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Circle fx:id="calendarCircle" fill="WHITE" radius="14.0" stroke="#ffffff00" strokeType="INSIDE" />
-      <Label fx:id="calendarDay" text="\$" />
+      <Circle fx:id="calendarDayCircle" fill="#ff7777" radius="14.0" stroke="#ffffff00" strokeType="INSIDE" />
+      <Label fx:id="calendarDay" alignment="CENTER" contentDisplay="CENTER" text="\$" textAlignment="CENTER" />
    </children>
 </StackPane>
