--- a/src/main/resources/view/TimerDisplay.fxml
+++ b/src/main/resources/view/TimerDisplay.fxml
@@ -9,7 +9,7 @@
 <AnchorPane fx:id="placeHolder" styleClass="pane-with-border" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <HBox>
       <children>
-        <TextArea fx:id="timerText" editable="false" prefHeight="182.0" prefWidth="200.0" styleClass="timer-display" />
+        <TextArea fx:id="timerText" editable="false" styleClass="timer-display" />
         <ProgressBar fx:id="progressBar" styleClass="progress-bar">
             <padding>
                <Insets left="5.0" right="5.0" top="7.0" />
