Added Change Tab Feature.

--- a/src/main/resources/view/EarningsListCard.fxml
+++ b/src/main/resources/view/EarningsListCard.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -25,10 +24,10 @@
                         <Region fx:constant="USE_PREF_SIZE" />
                     </minWidth>
                 </Label>
-                <Label fx:id="module" text="\$first" styleClass="cell_big_label" />
+                <Label fx:id="module" text="\$module" styleClass="cell_big_label" />
             </HBox>
             <Label fx:id="date" styleClass="cell_small_label" text="\$date" />
-            <Label fx:id="smount" styleClass="cell_small_label" text="\$amount" />
+            <Label fx:id="amount" styleClass="cell_small_label" text="\$amount" />
         </VBox>
     </GridPane>
 </HBox>
