--- a/src/main/resources/view/CalendarPanel.fxml
+++ b/src/main/resources/view/CalendarPanel.fxml
@@ -1,46 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox fx:id="calendarPanel" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane fx:id="calendarPanelGrid">
+      <StackPane style="-fx-background-color: #262626;">
+         <children>
+            <Label fx:id="month" text="\$month" textFill="WHITE" underline="true">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </StackPane>
+      <GridPane gridLinesVisible="true" style="-fx-background-color: #262626;">
         <columnConstraints>
-          <ColumnConstraints />
-          <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints />
-          <RowConstraints vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <StackPane fx:id="timelinePlaceholder" alignment="TOP_LEFT" prefWidth="20.0" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowSpan="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </StackPane>
-            <StackPane alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1">
-               <children>
-                  <VBox fx:id="calendarPlaceholder" alignment="CENTER_RIGHT" fillWidth="false" />
-               </children>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-            </StackPane>
-            <StackPane alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <children>
-                  <VBox fx:id="detailsPlaceholder" alignment="CENTER_RIGHT" fillWidth="false" />
-               </children>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-            </StackPane>
+            <Label contentDisplay="CENTER" text="Monday" textAlignment="CENTER" textFill="WHITE" />
+            <Label contentDisplay="CENTER" text="Tuesday" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" />
+            <Label contentDisplay="CENTER" text="Wednesday" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" />
+            <Label contentDisplay="CENTER" text="Thursday" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3" />
+            <Label contentDisplay="CENTER" text="Friday" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="4" />
+            <Label contentDisplay="CENTER" text="Saturday" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="5" />
+            <Label contentDisplay="CENTER" text="Sunday" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="6" />
          </children>
+      </GridPane>
+      <GridPane fx:id="calendar" gridLinesVisible="true" style="-fx-background-color: #262626;">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="100.0" vgrow="SOMETIMES" />
+        </rowConstraints>
       </GridPane>
    </children>
 </VBox>
