--- a/src/main/resources/view/LogPanel.fxml
+++ b/src/main/resources/view/LogPanel.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="logPanelBase" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox style="-fx-background-color: #2E2E2E;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ScrollPane fx:id="scrollLog" fitToWidth="true">
+      <ScrollPane fx:id="scrollLog" style="-fx-background-color: #2E2E2E;">
          <content>
-            <VBox fx:id="boxLog" />
+            <VBox fx:id="boxLog" style="-fx-background-color: #2E2E2E;" />
          </content>
       </ScrollPane>
    </children>
